--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "outer_mongolia",
   "version": "0.1.0",
-  "homepage": "https://ericwebsmith.github.io/outer_mongolia/",
+  "homepage": "http://waimenggu.com//",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
