--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "outer_mongolia",
   "version": "0.1.0",
-  "homepage": "http://waimenggu.com//",
+  "homepage": "http://waimenggu.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
